<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_vertical"
    android:id="@+id/profileInfoStart">


    <TextView
        android:id="@+id/tvProfileInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_info"
        android:textSize="36sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="70dp"/>

    <include
        android:id="@+id/profileInfoLayout"
        layout="@layout/profile_info"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:autofillHints="lastname"/>

    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:layout_marginTop="20dp"
        android:inputType="numberSigned"
        android:autofillHints="age"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button

            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="end|center"/>

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/buttonAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/again"
            android:layout_gravity="start"/>
    </FrameLayout>



</LinearLayout>